[gd_scene load_steps=3 format=3 uid="uid://df2go6gk53rk3"]

[ext_resource type="Script" path="res://UI/BasePanel/weapon_button.gd" id="1_f54l0"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_rg5y0"]
size = Vector2(16, 16)

[node name="WeaponButton" type="TextureButton"]
texture_normal = SubResource("PlaceholderTexture2D_rg5y0")
script = ExtResource("1_f54l0")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 17.0
offset_bottom = 17.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
